lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     expression -> expression EXPONENT expression
Rule 3     term -> expression TIMES expression
Rule 4     term -> expression DIVIDE expression
Rule 5     expression -> expression INTDIV expression
Rule 6     expression -> expression MOD expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression IN expression
Rule 10    expression -> expression CONCAT expression
Rule 11    expression -> NOT expression
Rule 12    expression -> expression ANDALSO expression
Rule 13    expression -> expression ORELSE expression
Rule 14    expression -> expression LESSERTHAN expression
Rule 15    expression -> expression LESSEREQUAL expression
Rule 16    expression -> expression EQUAL expression
Rule 17    expression -> expression NOTEQUAL expression
Rule 18    expression -> expression GREATEREQUAL expression
Rule 19    expression -> expression GREATERTHAN expression
Rule 20    factor -> LEFTPARENTHESIS expression RIGHTPARENTHESIS
Rule 21    expression -> LEFTBRACKET list_inside RIGHTBRACKET
Rule 22    list_inside -> expression COMMA list_inside
Rule 23    list_inside -> expression
Rule 24    list_inside -> <empty>
Rule 25    expression -> expression LEFTBRACKET expression RIGHTBRACKET
Rule 26    expression -> LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
Rule 27    tupleinside -> expression COMMA tupleinside
Rule 28    tupleinside -> expression
Rule 29    tupleinside -> <empty>
Rule 30    expression -> TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
Rule 31    expression -> term
Rule 32    term -> factor
Rule 33    factor -> NUMBER
Rule 34    factor -> BOOLEAN
Rule 35    term -> STRING

Terminals, with rules where they appear

ANDALSO              : 12
BOOLEAN              : 34
COMMA                : 22 27
CONCAT               : 10
DIVIDE               : 4
EQUAL                : 16
EXPONENT             : 2
GREATEREQUAL         : 18
GREATERTHAN          : 19
IN                   : 9
INTDIV               : 5
LEFTBRACKET          : 21 25
LEFTPARENTHESIS      : 20 26 30
LESSEREQUAL          : 15
LESSERTHAN           : 14
MINUS                : 8
MOD                  : 6
NOT                  : 11
NOTEQUAL             : 17
NUMBER               : 33
ORELSE               : 13
PLUS                 : 7
RIGHTBRACKET         : 21 25
RIGHTPARENTHESIS     : 20 26 30
STRING               : 35
TIMES                : 3
TUPLE_INDEX          : 30
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 22 23 25 25 27 28 30 30
factor               : 32
list_inside          : 21 22
statement            : 0
term                 : 31
tupleinside          : 26 27

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (2) expression -> expression . EXPONENT expression
    (5) expression -> expression . INTDIV expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . IN expression
    (10) expression -> expression . CONCAT expression
    (12) expression -> expression . ANDALSO expression
    (13) expression -> expression . ORELSE expression
    (14) expression -> expression . LESSERTHAN expression
    (15) expression -> expression . LESSEREQUAL expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . GREATEREQUAL expression
    (19) expression -> expression . GREATERTHAN expression
    (25) expression -> expression . LEFTBRACKET expression RIGHTBRACKET
    (3) term -> expression . TIMES expression
    (4) term -> expression . DIVIDE expression

    $end            reduce using rule 1 (statement -> expression .)
    EXPONENT        shift and go to state 12
    INTDIV          shift and go to state 13
    MOD             shift and go to state 14
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    IN              shift and go to state 17
    CONCAT          shift and go to state 18
    ANDALSO         shift and go to state 19
    ORELSE          shift and go to state 20
    LESSERTHAN      shift and go to state 21
    LESSEREQUAL     shift and go to state 22
    EQUAL           shift and go to state 23
    NOTEQUAL        shift and go to state 24
    GREATEREQUAL    shift and go to state 25
    GREATERTHAN     shift and go to state 26
    LEFTBRACKET     shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29


state 3

    (11) expression -> NOT . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 30
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 4

    (21) expression -> LEFTBRACKET . list_inside RIGHTBRACKET
    (22) list_inside -> . expression COMMA list_inside
    (23) list_inside -> . expression
    (24) list_inside -> .
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    RIGHTBRACKET    reduce using rule 24 (list_inside -> .)
    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    list_inside                    shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 5

    (26) expression -> LEFTPARENTHESIS . tupleinside RIGHTPARENTHESIS
    (20) factor -> LEFTPARENTHESIS . expression RIGHTPARENTHESIS
    (27) tupleinside -> . expression COMMA tupleinside
    (28) tupleinside -> . expression
    (29) tupleinside -> .
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    RIGHTPARENTHESIS reduce using rule 29 (tupleinside -> .)
    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    tupleinside                    shift and go to state 33
    expression                     shift and go to state 34
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 6

    (30) expression -> TUPLE_INDEX . expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 35
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 7

    (31) expression -> term .

    EXPONENT        reduce using rule 31 (expression -> term .)
    INTDIV          reduce using rule 31 (expression -> term .)
    MOD             reduce using rule 31 (expression -> term .)
    PLUS            reduce using rule 31 (expression -> term .)
    MINUS           reduce using rule 31 (expression -> term .)
    IN              reduce using rule 31 (expression -> term .)
    CONCAT          reduce using rule 31 (expression -> term .)
    ANDALSO         reduce using rule 31 (expression -> term .)
    ORELSE          reduce using rule 31 (expression -> term .)
    LESSERTHAN      reduce using rule 31 (expression -> term .)
    LESSEREQUAL     reduce using rule 31 (expression -> term .)
    EQUAL           reduce using rule 31 (expression -> term .)
    NOTEQUAL        reduce using rule 31 (expression -> term .)
    GREATEREQUAL    reduce using rule 31 (expression -> term .)
    GREATERTHAN     reduce using rule 31 (expression -> term .)
    LEFTBRACKET     reduce using rule 31 (expression -> term .)
    TIMES           reduce using rule 31 (expression -> term .)
    DIVIDE          reduce using rule 31 (expression -> term .)
    $end            reduce using rule 31 (expression -> term .)
    COMMA           reduce using rule 31 (expression -> term .)
    RIGHTBRACKET    reduce using rule 31 (expression -> term .)
    RIGHTPARENTHESIS reduce using rule 31 (expression -> term .)
    LEFTPARENTHESIS reduce using rule 31 (expression -> term .)


state 8

    (32) term -> factor .

    EXPONENT        reduce using rule 32 (term -> factor .)
    INTDIV          reduce using rule 32 (term -> factor .)
    MOD             reduce using rule 32 (term -> factor .)
    PLUS            reduce using rule 32 (term -> factor .)
    MINUS           reduce using rule 32 (term -> factor .)
    IN              reduce using rule 32 (term -> factor .)
    CONCAT          reduce using rule 32 (term -> factor .)
    ANDALSO         reduce using rule 32 (term -> factor .)
    ORELSE          reduce using rule 32 (term -> factor .)
    LESSERTHAN      reduce using rule 32 (term -> factor .)
    LESSEREQUAL     reduce using rule 32 (term -> factor .)
    EQUAL           reduce using rule 32 (term -> factor .)
    NOTEQUAL        reduce using rule 32 (term -> factor .)
    GREATEREQUAL    reduce using rule 32 (term -> factor .)
    GREATERTHAN     reduce using rule 32 (term -> factor .)
    LEFTBRACKET     reduce using rule 32 (term -> factor .)
    TIMES           reduce using rule 32 (term -> factor .)
    DIVIDE          reduce using rule 32 (term -> factor .)
    $end            reduce using rule 32 (term -> factor .)
    COMMA           reduce using rule 32 (term -> factor .)
    RIGHTBRACKET    reduce using rule 32 (term -> factor .)
    RIGHTPARENTHESIS reduce using rule 32 (term -> factor .)
    LEFTPARENTHESIS reduce using rule 32 (term -> factor .)


state 9

    (35) term -> STRING .

    EXPONENT        reduce using rule 35 (term -> STRING .)
    INTDIV          reduce using rule 35 (term -> STRING .)
    MOD             reduce using rule 35 (term -> STRING .)
    PLUS            reduce using rule 35 (term -> STRING .)
    MINUS           reduce using rule 35 (term -> STRING .)
    IN              reduce using rule 35 (term -> STRING .)
    CONCAT          reduce using rule 35 (term -> STRING .)
    ANDALSO         reduce using rule 35 (term -> STRING .)
    ORELSE          reduce using rule 35 (term -> STRING .)
    LESSERTHAN      reduce using rule 35 (term -> STRING .)
    LESSEREQUAL     reduce using rule 35 (term -> STRING .)
    EQUAL           reduce using rule 35 (term -> STRING .)
    NOTEQUAL        reduce using rule 35 (term -> STRING .)
    GREATEREQUAL    reduce using rule 35 (term -> STRING .)
    GREATERTHAN     reduce using rule 35 (term -> STRING .)
    LEFTBRACKET     reduce using rule 35 (term -> STRING .)
    TIMES           reduce using rule 35 (term -> STRING .)
    DIVIDE          reduce using rule 35 (term -> STRING .)
    $end            reduce using rule 35 (term -> STRING .)
    COMMA           reduce using rule 35 (term -> STRING .)
    RIGHTBRACKET    reduce using rule 35 (term -> STRING .)
    RIGHTPARENTHESIS reduce using rule 35 (term -> STRING .)
    LEFTPARENTHESIS reduce using rule 35 (term -> STRING .)


state 10

    (33) factor -> NUMBER .

    EXPONENT        reduce using rule 33 (factor -> NUMBER .)
    INTDIV          reduce using rule 33 (factor -> NUMBER .)
    MOD             reduce using rule 33 (factor -> NUMBER .)
    PLUS            reduce using rule 33 (factor -> NUMBER .)
    MINUS           reduce using rule 33 (factor -> NUMBER .)
    IN              reduce using rule 33 (factor -> NUMBER .)
    CONCAT          reduce using rule 33 (factor -> NUMBER .)
    ANDALSO         reduce using rule 33 (factor -> NUMBER .)
    ORELSE          reduce using rule 33 (factor -> NUMBER .)
    LESSERTHAN      reduce using rule 33 (factor -> NUMBER .)
    LESSEREQUAL     reduce using rule 33 (factor -> NUMBER .)
    EQUAL           reduce using rule 33 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 33 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 33 (factor -> NUMBER .)
    GREATERTHAN     reduce using rule 33 (factor -> NUMBER .)
    LEFTBRACKET     reduce using rule 33 (factor -> NUMBER .)
    TIMES           reduce using rule 33 (factor -> NUMBER .)
    DIVIDE          reduce using rule 33 (factor -> NUMBER .)
    $end            reduce using rule 33 (factor -> NUMBER .)
    COMMA           reduce using rule 33 (factor -> NUMBER .)
    RIGHTBRACKET    reduce using rule 33 (factor -> NUMBER .)
    RIGHTPARENTHESIS reduce using rule 33 (factor -> NUMBER .)
    LEFTPARENTHESIS reduce using rule 33 (factor -> NUMBER .)


state 11

    (34) factor -> BOOLEAN .

    EXPONENT        reduce using rule 34 (factor -> BOOLEAN .)
    INTDIV          reduce using rule 34 (factor -> BOOLEAN .)
    MOD             reduce using rule 34 (factor -> BOOLEAN .)
    PLUS            reduce using rule 34 (factor -> BOOLEAN .)
    MINUS           reduce using rule 34 (factor -> BOOLEAN .)
    IN              reduce using rule 34 (factor -> BOOLEAN .)
    CONCAT          reduce using rule 34 (factor -> BOOLEAN .)
    ANDALSO         reduce using rule 34 (factor -> BOOLEAN .)
    ORELSE          reduce using rule 34 (factor -> BOOLEAN .)
    LESSERTHAN      reduce using rule 34 (factor -> BOOLEAN .)
    LESSEREQUAL     reduce using rule 34 (factor -> BOOLEAN .)
    EQUAL           reduce using rule 34 (factor -> BOOLEAN .)
    NOTEQUAL        reduce using rule 34 (factor -> BOOLEAN .)
    GREATEREQUAL    reduce using rule 34 (factor -> BOOLEAN .)
    GREATERTHAN     reduce using rule 34 (factor -> BOOLEAN .)
    LEFTBRACKET     reduce using rule 34 (factor -> BOOLEAN .)
    TIMES           reduce using rule 34 (factor -> BOOLEAN .)
    DIVIDE          reduce using rule 34 (factor -> BOOLEAN .)
    $end            reduce using rule 34 (factor -> BOOLEAN .)
    COMMA           reduce using rule 34 (factor -> BOOLEAN .)
    RIGHTBRACKET    reduce using rule 34 (factor -> BOOLEAN .)
    RIGHTPARENTHESIS reduce using rule 34 (factor -> BOOLEAN .)
    LEFTPARENTHESIS reduce using rule 34 (factor -> BOOLEAN .)


state 12

    (2) expression -> expression EXPONENT . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 36
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 13

    (5) expression -> expression INTDIV . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 37
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 14

    (6) expression -> expression MOD . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 38
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 15

    (7) expression -> expression PLUS . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 39
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 16

    (8) expression -> expression MINUS . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 40
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 17

    (9) expression -> expression IN . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LESSERTHAN expression
    (15) expression -> . expression LESSEREQUAL expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GREATEREQUAL expression
    (19) expression -> . expression GREATERTHAN expression
    (21) expression -> . LEFTBRACKET list_inside RIGHTBRACKET
    (25) expression -> . expression LEFTBRACKET expression RIGHTBRACKET
    (26) expression -> . LEFTPARENTHESIS tupleinside RIGHTPARENTHESIS
    (30) expression -> . TUPLE_INDEX expression LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LEFTBRACKET     shift and go to state 4
    LEFTPARENTHESIS shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 41
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 18
